# encapsulation_ex

./: CMakeLists.txt  alive.cpp  alive.h  amovable.cpp  amovable.h  breakableobject.cpp  breakableobject.h  entity.cpp  entity.h  iattacker.h  int.cpp  int.h  main.cpp  mob.cpp  mob.h  player.cpp  player.h  staticobject.cpp  staticobject.h  vector2.cpp  vector2.h
